--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -56,6 +56,7 @@
 							<div class="col-xs-12 col-sm-12 col-lg-6">
 								<div style="padding-top: 15px;" class="hidden-xs hidden-sm"></div>
 								<h3><strong>Step 2:</strong> Install the userscript</h3>
+                <h5 class="gd-secondary">You only need to install this script once (multiple script installs are no longer required).</h5>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-lg-6" style="padding-top: 5px;">
 								<a tabindex="-1" mat-button class="mat-raised-button bg-gd-2 hover-scale"
