--- a/src/app/indexer/settings/share/share.component.html
+++ b/src/app/indexer/settings/share/share.component.html
@@ -1,4 +1,4 @@
-<h2 class="gd-secondary">Add a new user to team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
+<h2 class="gd-secondary">Add a new user to team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">group</mat-icon>&nbsp;{{index.name}}</span></h2>
 <h5>You can share this team with your allies to collect intel together. Invite them using their GrepoData username or send them an invite link.</h5>
 
 <div class="alert alert-gd-1">
