--- a/src/app/shared/dialogs/index-members/index-members.component.html
+++ b/src/app/shared/dialogs/index-members/index-members.component.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<a (click)="dialogRef.close()" class="close"></a>
-				<h2 class="gd-secondary">User list for team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
+				<h2 class="gd-secondary">User list for team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">group</mat-icon>&nbsp;{{index.name}}</span></h2>
 
 				<div class="alert alert-gd-1">
 					<h5 *ngIf="!loading_users && !updating_roles">These users have access to your team. You can manage their access rights here.</h5>
