--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -1,4 +1,5 @@
 .profile-container {
+  height: 100%;
 }
 
 .profile-content {
@@ -95,4 +96,21 @@
 .expand:hover {
   //display: inline-block;
   background: rgba(255, 255, 255, 0.47);
+}
+
+// Footer
+.profile-page {
+  min-height: 100%;
+  padding-top: 1px;
+  margin: -1px auto -54px;
+}
+.profile-footer {
+  background: #f3f3f3;
+  width: 100%;
+  height: 54px;
+  overflow: hidden;
+  padding-top: 7px;
+}
+.footer-push {
+  height: 54px;
 }
