--- a/src/app/layout/indexer-breadcrumbs/indexer-breadcrumbs.component.html
+++ b/src/app/layout/indexer-breadcrumbs/indexer-breadcrumbs.component.html
@@ -87,7 +87,7 @@
         </div>
         <div>
           <mat-icon class="directory">subdirectory_arrow_right</mat-icon>
-          <a routerLink="/alliance" [queryParams]="{world: data.player, id: data.player.id}">
+          <a routerLink="/player" [queryParams]="{world: data.world, id: data.player.id}">
             View player statistics
             <mat-icon>launch</mat-icon>
           </a>
