--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -182,7 +182,7 @@
                   <div class="lib-header-seperator"></div>
                 </div>
                 <div class="lib-row lib-desc">
-                  Collect all enemy city intelligence from your inbos or alliance forum:
+                  Easily collect enemy city intelligence from your inbox or alliance forum:
                   <br/>
                   <br/>
                   <ul>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="lib-row lib-footer">
                   <button mat-button class="mat-raised-button mat-primary" routerLink="/indexer">
-                    More info
+                    Get started
                   </button>
                 </div>
               </div>
