--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div id="pagehead" style="height: 100%;">
+<div id="pagehead" style="height: 100%; margin: -12px 10px 0 !important;">
 
 	<div *ngIf="loading" class="text-center">
 		<div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
@@ -85,12 +85,6 @@
 						<div fxFlex="33">
 							<ng-container *ngTemplateOutlet="allys"></ng-container>
 						</div>
-					</div>
-
-					<div class="hidden-xs hidden-sm">
-						<mat-card class="dense-card conquests-card" style="padding: 17px 5px 12px !important;">
-							<app-index-search></app-index-search>
-						</mat-card>
 					</div>
 
 					<!--recent conquests-->
