--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -28,6 +28,11 @@
         <!--</p>-->
       <!--</app-alert>-->
 
+
+      <mat-card *ngIf="['intel', 'player', 'alliance', 'town', 'team'].indexOf(active_tab)>=0" class="search-card">
+        <app-index-search *ngIf="account_confirmed"></app-index-search>
+      </mat-card>
+
       <div *ngIf="active_tab === 'bug'">
         <app-bug-report></app-bug-report>
       </div>
