--- a/src/app/indexer/search/search.component.scss
+++ b/src/app/indexer/search/search.component.scss
@@ -142,6 +142,10 @@ mat-paginator {
   font-size: 15px;
 }
 
+.world-cell {
+  font-size: 15px !important;
+}
+
 @media (max-width:550px) {
   .search-group {
     width: 100% !important;
@@ -163,5 +167,85 @@ mat-paginator {
   }
   .search-icon {
     top: 0 !important;
+  }
+
+  .world-cell {
+    font-size: 12px !important;
+  }
+
+  .search-results-container {
+    .table {
+      max-height: none !important;
+    }
+  }
+}
+
+@media (max-width:1100px) {
+
+  .search-results-container {
+    .table {
+      max-height: none !important;
+    }
+    &.town {
+      right: unset !important;
+      margin: auto !important;
+    }
+
+    &.player {
+      left: unset !important;
+      margin: auto !important;
+    }
+
+    &.alliance {
+      left: unset !important;
+      margin: auto !important;
+    }
+  }
+}
+
+.search-results-container {
+  position: absolute;
+  width: 620px;
+  max-width: 100vw;
+  z-index: 10000;
+  box-shadow: 0px 0px 10px 1px #18333330 !important;
+  background: #334254;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+
+  &.town {
+    right: 20px;
+  }
+  &.player {
+    left: 20px;
+  }
+  &.alliance {
+    left: calc(100% / 3);
+  }
+
+  .name-cell {
+    width: 40%;
+  }
+
+  .table {
+    max-height: calc(100vh - 240px);
+    overflow: auto;
+    display: grid;
+  }
+  .row_custom {
+    display: inline-table;
+  }
+  .header {
+    position: sticky;
+    top: 0;
+  }
+
+  .close-results {
+    margin: 8px;
+    color: #fff8ec;
+    font-weight: 700;
+  }
+  .close-results:hover {
+    cursor: pointer;
   }
 }
